dnl Process this file with autoconf to produce a configure script.
AC_INIT(rvcd.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vtgrab, 0.1.2)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h, ,
	AC_MSG_ERROR(
I can't seem to find some needed C library headers.
	)
)
AC_CHECK_HEADERS(sys/vt.h sys/kd.h, ,
	AC_MSG_ERROR(
I need some kernel header files.
	)
)
AC_CHECK_HEADERS(inttypes.h, ,
	AC_MSG_ERROR(
I need a newer C library.
	)
)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(select strcspn strdup strstr strtoul)

AC_OUTPUT(Makefile)
